Fix bug 399412 - don't reflow overflow containers that are pending re-placement. r+sr=roc